--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-astroid==2.3.3
-Click==7.0
-colorama==0.4.3
-fastapi==0.47.1
+click==7.1.2
+fastapi==0.61.1
 gunicorn==20.0.4
-h11==0.9.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pydantic==1.4
-pylint==2.4.4
-six==1.14.0
-starlette==0.12.9
-uvicorn==0.11.7
-websockets==8.1
-wrapt==1.11.2
+h11==0.10.0
+Pillow==7.2.0
+pydantic==1.6.1
+python-multipart==0.0.5
+six==1.15.0
+starlette==0.13.6
+typing-extensions==3.7.4.3
+uvicorn==0.12.1
